# Puzzlebot

./: .gitignore  README.md
reto/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
reto/log/: latest_build  latest_list
reto/src/extended_pose_interface/: CMakeLists.txt
reto/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
reto/src/interprete/: package.xml  setup.cfg  setup.py
reto/src/interprete/interprete/: interprete.py
reto/src/line_follower/: package.xml  setup.py
reto/src/line_follower/config/: line_follower_params.yaml
reto/src/line_follower/line_follower/: line_follower.py
reto/src/log/: latest_build
reto/src/preprocess_cam/: package.xml  setup.cfg  setup.py
reto/src/preprocess_cam/preprocess_cam/: preprocess_cam_node.py
reto/src/puzzlebot_control_utils/: package.xml  setup.cfg  setup.py
reto/src/puzzlebot_control_utils/launch/: line_follower_pipeline_launch.py
reto/src/puzzlebot_control_utils/puzzlebot_control_utils/: speed_moderator.py
reto/src/puzzlebot_localisation/: package.xml  setup.py
reto/src/puzzlebot_pid_controller/: package.xml  setup.py
reto/src/seguidor_poligonos/: package.xml  setup.cfg  setup.py
reto/src/seguidor_triangular_OLC/: package.xml  setup.cfg  setup.py
reto/src/signals_detection/: package.xml  setup.cfg  setup.py
reto/src/signals_detection/signals_detection/: yolo_signals_detection.py
reto/src/traffic_light_detector/: package.xml  setup.py
src/: setup.cfg
src/launch/: pid_controller.launch.py
src/puzzlebot_pid_controller/: pid_controller_node.py
(+107 files in other folders)
